--- a/private_dot_config/polybar/hack/modules.ini
+++ b/private_dot_config/polybar/hack/modules.ini
@@ -67,7 +67,7 @@ label-volume = %percentage%%
 
 ; Available tokens:
 ;   %percentage% (default
-label-muted = " Muted"
+label-muted = "  Muted"
 label-muted-foreground = ${color.red}
 
 ; Only applies if <ramp-volume> is used
@@ -163,13 +163,13 @@ format-full-prefix = 
 ;   %percentage% (default)
 ;   %time%
 ;   %consumption% (shows current charge rate in watts)
-label-charging = "%percentage%%"
+label-charging = " %percentage%%"
 
 ; Available tokens:
 ;   %percentage% (default)
 ;   %time%
 ;   %consumption% (shows current discharge rate in watts)
-label-discharging = "%percentage%%"
+label-discharging = " %percentage%%"
 
 ; Available tokens:
 ;   %percentage% (default)
@@ -341,7 +341,7 @@ interval = 1
 ;   <ramp-coreload>
 ;;format = <label> <ramp-coreload>
 format = <label>
-format-prefix = ﬙
+format-prefix = 
 ;  default hack prefix
 
 ; Available tokens:
@@ -349,7 +349,7 @@ format-prefix = ﬙
 ;   %percentage-sum% - Cumulative load on all cores
 ;   %percentage-cores% - load percentage for each core
 ;   %percentage-core[1-9]% - load percentage for specific core
-label = " %percentage%%"
+label = "  %percentage%%"
 
 ; Spacing between individual per-core ramps
 ;;ramp-coreload-spacing = 1
@@ -417,7 +417,7 @@ fixed-values = true
 ;   <bar-used>
 ;   <ramp-capacity>
 format-mounted = <label-mounted>
-format-mounted-prefix = 
+format-mounted-prefix = 
 
 ; Available tags:
 ;   <label-unmounted> (default)
@@ -434,7 +434,7 @@ format-unmounted-prefix = 
 ;   %free%
 ;   %used%
 ; Default: %mountpoint% %percentage_free%%
-label-mounted = " %free%"
+label-mounted = "  %free%"
 
 ; Available tokens:
 ;   %mountpoint%
@@ -603,7 +603,7 @@ interval = 1
 ;   <ramp-swap-used>
 ;   <ramp-swap-free>
 format = <label>
-format-prefix = 
+format-prefix = 󰍛
 ;  default hack prefix
 
 ; Available tokens:
@@ -624,7 +624,7 @@ format-prefix = 
 ;   %gb_swap_free%
 ;   %gb_swap_used%
 
-label = " %mb_used%"
+label = "  %mb_used%"
 
 ; Only applies if <ramp-used> is used
 ;;ramp-used-0 = ${memory.used0}
@@ -774,12 +774,12 @@ unknown-as-up = true
 ;   <label-connected> (default)
 ;   <ramp-signal>
 format-connected = <label-connected>
-format-connected-prefix = 說
+format-connected-prefix = 
 
 ; Available tags:
 ;   <label-disconnected> (default)
 format-disconnected = <label-disconnected>
-format-disconnected-prefix = ﲁ
+format-disconnected-prefix = 󰖪
 
 ; Available tags:
 ;   <label-connected> (default)
@@ -797,12 +797,12 @@ format-disconnected-prefix = ﲁ
 ;   %downspeed% [wireless+wired]
 ;   %linkspeed% [wired]
 ; Default: %ifname% %local_ip%
-label-connected = "%{A1:gnome-terminal -e 'nmtui-connect':}%essid% %{A}"
+label-connected = "  %{A1:gnome-terminal -e 'nmtui-connect':}%essid% %{A}"
 
 ; Available tokens:
 ;   %ifname%    [wireless+wired]
 ; Default: (none)
-label-disconnected = "%{A1:gnome-terminal -e 'nmtui-connect':} Offline %{A}"
+label-disconnected = "  %{A1:gnome-terminal -e 'nmtui-connect':} Offline %{A}"
 ;;label-disconnected-foreground = #66ffffff
 
 ; Available tokens:
@@ -1106,16 +1106,16 @@ enable-scroll = true
 ; NOTE: The desktop name needs to match the name configured by the WM
 ; You can get a list of the defined desktops using:
 ; $ xprop -root _NET_DESKTOP_NAMES
-icon-0 = 1;
-icon-1 = 2;
-icon-2 = 3;
-icon-3 = 4;
-icon-4 = 5;
-icon-5 = 6;
-icon-6 = 7;
-icon-7 = 8;
-icon-8 = 9;
-icon-9 = 0;
+icon-0 = 1;󱃾
+icon-1 = 2;󱃾
+icon-2 = 3;󱃾
+icon-3 = 4;󱃾
+icon-4 = 5;󱃾
+icon-5 = 6;󱃾
+icon-6 = 7;󱃾
+icon-7 = 8;󱃾
+icon-8 = 9;󱃾
+icon-9 = 0;󱃾
 icon-default = 
 ;vs code : ﬏; browser: ; file: ; terminal: ; workspace: ;
 
