--- a/private_dot_config/picom/picom.conf
+++ b/private_dot_config/picom/picom.conf
@@ -1,10 +1,12 @@
-corner-radius = 20
+corner-radius = 15
 
 rounded-corners-exclude = [];
 
 backend = "glx";
 
 vsync = true;
+
+unredir-if-possible = true;
 
 opacity-rule = [
     "90:class_g = 'Code'",
