--- a/private_dot_config/polybar/hack/colors.ini
+++ b/private_dot_config/polybar/hack/colors.ini
@@ -12,11 +12,11 @@
 ;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
 
 ;; main colors
-background = #B20e0e0d
-foreground = #e0e7e7
-primary = #32609A
-red = #FF5250
-green = #43a047
-yellow = #fdd835
+background = #0c2635
+foreground = #90a2ae
+primary = #b84f2c
+red = #b84f2c
+green = #3a5c69
+yellow = #af966e
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
