--- a/private_dot_config/polybar/hack/config.ini
+++ b/private_dot_config/polybar/hack/config.ini
@@ -59,15 +59,15 @@ fixed-center = true
 ; Dimension defined as pixel value (e.g. 35) or percentage (e.g. 50%),
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
-width = 99%
+width = 98%
 height = 30
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in an offset in the x or y direction 
 ; of 50% minus 10 pixels
-offset-x = 0.5%
-offset-y = 0.7%
+offset-x = 1%
+offset-y = 1.1%
 
 ; Background ARGB color (e.g. #f00, #ff992a, #ddff1023)
 background = ${color.background}
@@ -130,20 +130,20 @@ module-margin-right = 0
 ; Iosevka Nerd Font:pixelsize=10;3
 ; Iosevka Nerd Font:pixelsize=12;4
 
-font-0 = "JetBrainsMono Nerd Font:pixelsize=10;3"
-font-1 = "JetBrainsMono Nerd Font:pixelsize=12;4"
+font-0 = "JetBrainsMono Nerd Font:pixelsize=9;3"
+font-1 = "JetBrainsMono Nerd Font:pixelsize=11;4"
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-border-bottom-size = 0
-border-bottom-color = ${color.primary}
+border-size = 0
+border-color = ${color.primary}
 
 modules-left =  cpu sep memory sep filesystem sep temperature
 modules-center = workspaces
-modules-right = bluetooth sep updates sep alsa sep battery sep network sep date sep sysmenu
+modules-right = updates sep battery sep network sep date sep sysmenu
 enable-ipc = true
 
 ;modules-left = launcher workspaces google github reddit gmail twitter
