--- a/private_dot_config/polybar/hack/modules.ini
+++ b/private_dot_config/polybar/hack/modules.ini
@@ -173,7 +173,7 @@ label-discharging = " %percentage%%"
 
 ; Available tokens:
 ;   %percentage% (default)
-label-full = " Full"
+label-full = "  Full"
 
 ; Only applies if <ramp-capacity> is used
 ramp-capacity-0 = 
@@ -349,7 +349,7 @@ format-prefix = 
 ;   %percentage-sum% - Cumulative load on all cores
 ;   %percentage-cores% - load percentage for each core
 ;   %percentage-core[1-9]% - load percentage for specific core
-label = "  %percentage%%"
+label = " %percentage%%"
 
 ; Spacing between individual per-core ramps
 ;;ramp-coreload-spacing = 1
@@ -434,7 +434,7 @@ format-unmounted-prefix = 
 ;   %free%
 ;   %used%
 ; Default: %mountpoint% %percentage_free%%
-label-mounted = "  %free%"
+label-mounted = " %free%"
 
 ; Available tokens:
 ;   %mountpoint%
@@ -624,7 +624,7 @@ format-prefix = 󰍛
 ;   %gb_swap_free%
 ;   %gb_swap_used%
 
-label = "  %mb_used%"
+label = " %mb_used%"
 
 ; Only applies if <ramp-used> is used
 ;;ramp-used-0 = ${memory.used0}
@@ -1106,17 +1106,7 @@ enable-scroll = true
 ; NOTE: The desktop name needs to match the name configured by the WM
 ; You can get a list of the defined desktops using:
 ; $ xprop -root _NET_DESKTOP_NAMES
-icon-0 = 1;󱃾
-icon-1 = 2;󱃾
-icon-2 = 3;󱃾
-icon-3 = 4;󱃾
-icon-4 = 5;󱃾
-icon-5 = 6;󱃾
-icon-6 = 7;󱃾
-icon-7 = 8;󱃾
-icon-8 = 9;󱃾
-icon-9 = 0;󱃾
-icon-default = 
+icon-default = 
 ;vs code : ﬏; browser: ; file: ; terminal: ; workspace: ;
 
 
