--- a/private_dot_config/picom/picom.conf
+++ b/private_dot_config/picom/picom.conf
@@ -1,14 +1,52 @@
 corner-radius = 15
 
-rounded-corners-exclude = [];
+use-damage = true;
 
 backend = "glx";
 
+detect-rounded-corners = true;
+
+detect-transient = true;
+
+detect-client-opacity = true;
+
 vsync = true;
 
-unredir-if-possible = true;
-
 opacity-rule = [
-    "90:class_g = 'Code'",
-    "80:class_g = 'Gnome-terminal'"
+    "80:class_g = 'Code'",
+    "80:class_g = 'Cursor'",
+    "80:class_g = 'Gnome-terminal'",
+    # "95:class_g = 'Google-chrome'"
 ];
+
+# Enable opacity for inactive windows
+inactive-opacity = 0.65;
+active-opacity = 1.0;
+
+# Ensure fading transitions work smoothly
+inactive-opacity-override = true;
+
+#################################
+#           Fading              #
+#################################
+
+# Fade windows in/out when opening/closing and when opacity changes,
+# unless no-fading-openclose is used. Can be set per-window using rules.
+#
+# Default: false
+fading = false;
+
+# Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
+fade-in-step = 0.03;
+
+# Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
+fade-out-step = 0.03;
+
+# The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
+# fade-delta = 10
+
+# Do not fade on window open/close.
+# no-fading-openclose = false
+
+# Do not fade destroyed ARGB windows with WM frame. Workaround of bugs in Openbox, Fluxbox, etc.
+# no-fading-destroyed-argb = false
