--- a/private_dot_config/picom/picom.conf
+++ b/private_dot_config/picom/picom.conf
@@ -1,5 +1,10 @@
 corner-radius = 15
 
+rounded-corners-exclude = [
+  # Rounded cornes of polybar are handled in polybar config direclty
+  "class_g = 'Polybar'"
+];
+
 use-damage = true;
 
 backend = "glx";
@@ -13,40 +18,23 @@ detect-client-opacity = true;
 vsync = true;
 
 opacity-rule = [
-    "80:class_g = 'Code'",
-    "80:class_g = 'Cursor'",
-    "80:class_g = 'Gnome-terminal'",
+    # "80:class_g = 'Code'",
+    "90:class_g = 'Cursor'",
+    "90:class_g = 'Gnome-terminal'",
+    "95:class_g = 'Polybar'",
     # "95:class_g = 'Google-chrome'"
+]
+
+blur-method = "kernel";
+blur-size = 7;
+blur-background-exclude = [
+    # For screenshots
+    "class_g = 'slop'",
+    "class_g = 'maim'",
+    # "class_g = 'Code
+    # "class_g = 'Cursor'",
+    #"class_g = 'Gnome-terminal'",
+    "name *= 'rect-overlay'",
+    # "class_g = 'Google-chrome'"
 ];
 
-# Enable opacity for inactive windows
-inactive-opacity = 0.65;
-active-opacity = 1.0;
-
-# Ensure fading transitions work smoothly
-inactive-opacity-override = true;
-
-#################################
-#           Fading              #
-#################################
-
-# Fade windows in/out when opening/closing and when opacity changes,
-# unless no-fading-openclose is used. Can be set per-window using rules.
-#
-# Default: false
-fading = false;
-
-# Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
-fade-in-step = 0.03;
-
-# Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
-fade-out-step = 0.03;
-
-# The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-# fade-delta = 10
-
-# Do not fade on window open/close.
-# no-fading-openclose = false
-
-# Do not fade destroyed ARGB windows with WM frame. Workaround of bugs in Openbox, Fluxbox, etc.
-# no-fading-destroyed-argb = false
